@@ -188,14 +188,6 @@ SOURCE="..\..\..\linkguide\direct-usb-protocol.txt"
 # End Source File
 # Begin Source File
 
-SOURCE="..\..\..\linkguide\analysis\logs\ti84+_usb\recv_var_a.pkt"
-# End Source File
-# Begin Source File
-
-SOURCE="..\..\..\linkguide\analysis\logs\ti84+_usb\send_var_b.pkt"
-# End Source File
-# Begin Source File
-
 SOURCE=..\..\..\..\..\ticables.log
 # End Source File
 # Begin Source File
