@@ -11,6 +11,8 @@ To do :
 
 - create a linked list of allocated virtual packet and clear/release them on ticalcs_error_get. Same for calcparam
 - TI89 get_version to review (HW1/2/3)
+- split send_flash & send_os
+- recv_flash: vr should be const
 
 Log:
 
